samples/_failures_safe/1761097390_a8c650_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4d65a0fb.c: In function ‘main’:
./samples/SAFE/__tmp_4d65a0fb.c:210:17: error: expected ‘;’ at end of input
  210 |         return 1
      |                 ^
      |                 ;
./samples/SAFE/__tmp_4d65a0fb.c:210:9: error: expected declaration or statement at end of input
  210 |         return 1
      |         ^~~~~~
./samples/SAFE/__tmp_4d65a0fb.c:210:9: error: expected declaration or statement at end of input
